Closed Bug 1609257 Opened 4 years ago Closed 4 years ago

Firefox 72 no longer loads Shockwave Flash (after setting plugin.load_flash_only pref = false)

Categories

(Core Graveyard :: Plug-ins, defect, P1)

72 Branch
Unspecified
Windows
defect

Tracking

(firefox-esr68 unaffected, firefox72- wontfix, firefox73- fixed, firefox74- fixed)

RESOLVED FIXED
mozilla74
Tracking Status
firefox-esr68 --- unaffected
firefox72 - wontfix
firefox73 - fixed
firefox74 - fixed

People

(Reporter: cpeterson, Assigned: Gijs)

References

(Regression)

Details

(Keywords: regression)

Attachments

(9 files)

In bug 1608028 comment 2, Steph Michaut reported the following Flash regression:

Windows 7 32 bits, firefox 72.0.1

about:plugins doesn't show the flash plugin. VLC plugin is missing as well.

Firefox does not even ask to activate, nothing.

Actually if I reinstall flash player, it works right after. But as soon as I close firefox and reopen it, it's broken again.

My problem is not only with farmville or similar games but with all pages using flash that I have tested.
Even https://get.adobe.com/fr/flashplayer/about/ doesn't work work with FF 72.0.1

Firefox does not even ask me to activate flash player.

Actually it looks it does not detect the plugin is installed. When I type about:plugins, it only shows openh264 and Widewine, while shockwave flash should be there. My VLC Web Plugin is missing as well from the about:plugins page.

The first time I launch FF after installing the flash plugin, it works as expected. But when I close FF and relaunch it, it doesn't work anymore. Then I reinstall the plugin and it works again. And so on.

I downgraded to FF 71, with the same profile. The issue is gone.

  1. Steph, can you please post your Firefox's about:support information in this bug?

  2. Does Firefox 71's about:plugins show VLC Web Plugin? I know Firefox stopped running plugins (like VLC Web Plugin) other than Flash in Firefox 57, but I don't remember if it still lists other plugins in about:plugins.

  3. If you have time, something that would help us is if someone on your team could use Mozilla's "mozregression" tool to bisect when the problem first starts for you (which will be some time during Firefox Nightly 72 development). mozregression is pretty easy to use. It automatically downloads and launches older Firefox Nightly builds. You just need to try to reproduce the bug in the older build and then tell mozregression whether the build is good or bad.

https://mozilla.github.io/mozregression/

Attached file about:plugins FF 71
Attached file about:support FF 71

Ok, I attached the about:support, about:plugins for 71.0 and 72.0.1
I hope I did that in the correct way.

I'll give it a try to the mozgression tool.

I just installed the newest flash plugin, 32.0.0.314, it changes nothing.

Also tried to start FF in safe mode, no change.

Installed Firefox Setup 72.0.1.exe instead of the online update, no change.

For information, to downgrade to 71.0, I install Firefox Setup 71.0.exe, and launch it with -allow-upgrade. So I use the same profile for both versions.

Thanks! This is helpful. I see you are running 32-bit Windows 7. (Your Flash plugin file is C:\Windows\system32\Macromed\Flash\NPSWF32_32_0_0_303.dll.)

@ Gijs, could your fix for plugin data bug 1545123 have caused Firefox 72 to not find any NPAPI plugins?

Here is a list of plugin and sandbox bugs fixed in Firefox 72:

https://bugzilla.mozilla.org/buglist.cgi?f1=cf_status_firefox72&list_id=15070115&o1=anyexact&resolution=FIXED&query_format=advanced&v1=fixed%2Cverified&component=Plugger&component=Security%3A%20Process%20Sandboxing

Flags: needinfo?(gijskruitbosch+bugs)
See Also: → 1545123
Attached file mozregression log
Yes 32 bit.

Ran mozregression.
Log:

Yes 32 bit.

Ran mozregression.
Log attached.

Indeed mozregression indicates bug 1545123.

Regressed by: 1545123
Has Regression Range: --- → yes

Steph, can you attach a copy of the pluginreg.dat file in your profile both after running the working 71 build and after running the broken 72 build?

Also, in the broken 72 build, if you open about:config and filter for plugin.flash, do any preferences show up, and if so, which ones?

Finally, if you temporarily uninstall the VLC plugin from the system, does the problem persist?

Flags: needinfo?(gijskruitbosch+bugs) → needinfo?(stephanemichaut90)

Oh, and one more question - if you flip plugin.load_flash_only back to the default of true (in about:config), does the problem persist?

Flags: needinfo?(stephanemichaut90)

Attached:
pluginreg 71 working.dat
pluginreg F2 broken.dat

F2 is a typo it should be 72 . I don't know how to delete/edit the attachments. Sorry for the confusion.

I have no plugin.flash in about:config with FF 72. Didn't try FF 71.
But I have:
plugin.load_flash_only false
plugin.state.flash 2

I changed plugin.load_flash_only to true: It fixes the issue, the flash plugin in back in webpages. Also listed now in about:plugins. But somehow the VLC Web plugin is still not there in about:plugins.

I reverted plugin.load_flash_only to false, closed and restarted firefox. The flash plugin still works and VLC Web plugin is back in about:plugins.

Now that it works, I have some plugin.flash in about:config :

plugin.flash.arch x86-msvc
plugin.flash.blockliststate 0
plugin.flash.desc Shockwave Flash 32.0 r0
plugin.flash.lastmod_hi 367
plugin.flash.lastmod_lo -1502436384
plugin.flash.path C:\Windows\system32\Macromed\Flash\NPSWF32_32_0_0_314.dll
plugin.flash.version

I also attached pluginreg F2 working.dat (read 72 instead of F2).

Now it works, I'm unsure how to reproduce the bug. So I didn't try to uninstall the VLC plugin.

Actually I spoke too soon when I said:
"I reverted plugin.load_flash_only to false, closed and restarted firefox. The flash plugin still works and VLC Web plugin is back in about:plugins".

I restarded FF and it's broken again. Then contrary to what I said, plugin.load_flash_only has be true. But VLC Web plugin is missing in about:plugins.

Sorry again for the confusion.

Off topic, is it possible to edit/delete my comments?

Steph: Thanks, that already helps.

In 71, does VLC ever do anything, apart from being present in about:plugins? Like, could you use it for something inside Firefox, and if so, what?

VLC sort of messes with things here because it also lists flash as a supported mimetype. But the load_flash_only pref was always meant to be internal, and is meant to only support our internal test plugins (to ensure plugins work correctly) and actual flash. I imagine it's passing for flash (because of the mimetype) in some places, but not in others (because we have some other checks) and between that and that pref things get very confused. In principle, it iss possible that something is just broken in the load_flash_only=false configuration even without VLC, but that seems somewhat unlikely given that most of our internal tests run in that configuration.

Chris, how would you like this prioritized, given that this seems to only happen for people who have flipped this internal pref (that was never exposed in about:config, but apparently there was a cottage industry of websites suggesting people set it to get their NPAPI things to work in non-ESR 52, or something) ?

Flags: needinfo?(stephanemichaut90)
Flags: needinfo?(cpeterson)
See Also: 15451231293062

I'm not sure about this VLC plugin... Never really realized it existed until I had the issue reported here. I was looking for some hints on the internet and found the about:plugins thing. It's how I found I had a VLC plugin.
I suppose it was installed with VLC. I don't know whether it does something inside firefox... Like I said I didn't even know it existed...

About load_flash_only, I don't think I have flipped this internal pref myself, because I remember nothing about that. But I could be wrong, if it was something 3 years ago...

[Tracking Requested - why for this release]:

@ Relman: This is a regression in 72. This fix will be a safe and small and will un-break Flash for a small number of users who have been messing around in about:config. This fix probably doesn't warrant a new 72.0.x dot release, but it might be a good candidate for a 72.0.x ride along. AFAIK, we don't have telemetry on how many users have changed this pref, so I don't know how many people are impacted by this problem.

(In reply to :Gijs (he/him) from comment #18)

Chris, how would you like this prioritized, given that this seems to only happen for people who have flipped this internal pref (that was never exposed in about:config, but apparently there was a cottage industry of websites suggesting people set it to get their NPAPI things to work in non-ESR 52, or something) ?

Gijs, I like your suggestion (in Slack) to change Firefox's plugin code to only check the plugin.load_flash_only pref during tests. That would un-break any users that have changed this pref long ago, while still allowing our plugin tests to work unchanged.

Flags: needinfo?(stephanemichaut90)
Flags: needinfo?(gijskruitbosch+bugs)
Flags: needinfo?(cpeterson)
Summary: Firefox 72 about:plugins no longer sees Shockwave Flash or VLC Web Plugin → Firefox 72 no longer loads Shockwave Flash (after setting plugin.load_flash_only pref = false)
Assignee: nobody → gijskruitbosch+bugs
Status: NEW → ASSIGNED
Flags: needinfo?(gijskruitbosch+bugs)
Pushed by gijskruitbosch@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/33604d9a6b1d
only read flash only pref in automation, r=handyman
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74

Comment on attachment 9121677 [details]
Bug 1609257 - only read flash only pref in automation, r?handyman

Beta/Release Uplift Approval Request

  • User impact if declined: flash might break
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: n/a
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is effectively a 1-line change where we make a pref only take effect in automated tests, so it stops breaking things in the wild.
  • String changes made/needed: nope
Attachment #9121677 - Flags: approval-mozilla-beta?

Comment on attachment 9121677 [details]
Bug 1609257 - only read flash only pref in automation, r?handyman

I'm pretty meh about this change overall, but it's also pretty close to zero risk so we might as well take it to help users avoid random bustage after flipping prefs they shouldn't have. Approved for 73.0b9.

Attachment #9121677 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: