Bug 1609257 - only read flash only pref in automation, r=handyman

Differential Revision: https://phabricator.services.mozilla.com/D60335

--HG--
extra : moz-landing-system : lando