toolkit/mozapps/extensions/test/xpcshell/test_general.js
@@ -15,6 +15,13 @@ async function run_test() {
   // Otherwise the plugins get initialized async and throw off our
   // counting.
   Services.prefs.setBoolPref("plugin.load_flash_only", false);
+  // plugin.load_flash_only is only respected if xpc::IsInAutomation is true.
+  // This is not the case by default in xpcshell tests, unless the following
+  // pref is also set. Fixing this generically is bug 1598804
+  Services.prefs.setBoolPref(
+    "security.turn_off_all_security_so_that_viruses_can_take_over_this_computer",
+    true
+  );
 
   await promiseStartupManager();
   let list = await AddonManager.getAddonsByTypes(null);
